Support of NTLM authentication in Renderer

--- a/WebContent/WEB-INF/zul/renderer/edit.zul
+++ b/WebContent/WEB-INF/zul/renderer/edit.zul
@@ -22,7 +22,7 @@
 			<tab id="tabRedendererFields" label="Fields" />
 			<tab id="tabRedendererCss" label="CSS Style" />
 			<tab id="tabRedendererLog" label="Log" />
-			<tab id="tabCredential" label="Authentication" />
+			<tab id="tabAuth" label="Authentication" />
 			<tab id="tabViewer" label="Viewer" />
 			<tab id="tabRedendererTest" label="Testing" />
 		</tabs>
@@ -40,7 +40,7 @@
 				<include src="WEB-INF/zul/renderer/edit_log.zul" />
 			</tabpanel>
 			<tabpanel>
-				<include src="WEB-INF/zul/renderer/edit_credential.zul" />
+				<include src="WEB-INF/zul/renderer/edit_auth.zul" />
 			</tabpanel>
 			<tabpanel>
 				<include src="WEB-INF/zul/renderer/edit_viewer.zul" />
