--- a/WebContent/WEB-INF/zul/schema/parser/edit_fieldmap.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/edit_fieldmap.zul
@@ -14,74 +14,79 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<listbox model="@load(parser.currentParser.fieldMap.list)"
-	selectedItem="@bind(parser.selectedFieldMapItem)">
-	<auxhead>
-		<auxheader colspan="5">
-			<hbox align="center">
-				<listbox mold="select"
-					model="@load(parser.parserFieldList)"
-					selectedItem="@bind(parser.selectedParserField)">
-					<template name="model" var="parserField">
-						<listitem label="@load(parserField)"
-							value="@load(parserField)" />
-					</template>
-				</listbox>
-				<label>linked in</label>
-				<listbox mold="select"
-					model="@load(parser.indexFieldList)"
-					selectedItem="@bind(parser.selectedIndexField)">
-					<template name="model" var="indexField">
-						<listitem label="@load(indexField.name)"
-							value="@load(indexField)" />
-					</template>
-				</listbox>
-				<label>captured by (reg.exp.):</label>
-				<textbox cols="80" value="@bind(parser.captureRegexp)" />
-				<space />
-				<checkbox label="remove tags"
-					checked="@bind(parser.removeTag)" />
-				<space />
-				<label>Analyzer:</label>
-				<listbox model="@load(parser.analyzerNameList)"
-					mold="select" selectedItem="@bind(parser.analyzer)">
-					<template name="model">
-						<listitem label="@load(each)" />
-					</template>
-				</listbox>
-				<space />
-				<button label="Add"
-					onClick="@command('onSaveFieldMapItem')"
-					visible="@load(parser.fieldMapItemNotSelected)" />
-				<hbox visible="@load(parser.fieldMapItemSelected)">
-					<button label="Cancel"
-						onClick="@command('onCancelFieldMapItem')" />
+<zk>
+	<listbox model="@load(parser.currentParser.fieldMap.list)"
+		selectedItem="@bind(parser.selectedFieldMapItem)">
+		<auxhead>
+			<auxheader colspan="6">
+				<hbox align="center">
+					<listbox mold="select"
+						model="@load(parser.parserFieldList)"
+						selectedItem="@bind(parser.selectedParserField)">
+						<template name="model" var="parserField">
+							<listitem label="@load(parserField)"
+								value="@load(parserField)" />
+						</template>
+					</listbox>
+					<label>linked in</label>
+					<listbox mold="select"
+						model="@load(parser.indexFieldList)"
+						selectedItem="@bind(parser.selectedIndexField)">
+						<template name="model" var="indexField">
+							<listitem label="@load(indexField.name)"
+								value="@load(indexField)" />
+						</template>
+					</listbox>
+					<label>captured by (reg.exp.):</label>
+					<textbox cols="60"
+						value="@bind(parser.captureRegexp)" />
 					<space />
-					<button label="Save"
-						onClick="@command('onSaveFieldMapItem')" />
+					<checkbox label="remove tags"
+						checked="@bind(parser.removeTag)" />
+					<space />
+					<label>Analyzer:</label>
+					<listbox model="@load(parser.analyzerNameList)"
+						mold="select" selectedItem="@bind(parser.analyzer)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
+					<space />
+					<button label="Add"
+						onClick="@command('onSaveFieldMapItem')"
+						visible="@load(parser.fieldMapItemNotSelected)" />
+					<hlayout
+						visible="@load(parser.fieldMapItemSelected)">
+						<button label="Cancel"
+							onClick="@command('onCancelFieldMapItem')" />
+						<space />
+						<button label="Save"
+							onClick="@command('onSaveFieldMapItem')" />
+					</hlayout>
 				</hbox>
-			</hbox>
-		</auxheader>
-	</auxhead>
-	<listhead>
-		<listheader label="Parser field" hflex="min" />
-		<listheader label="Index field" hflex="min" />
-		<listheader label="Capture Reg.Exp." />
-		<listheader label="Analyzer" hflex="min" />
-		<listheader label="Remove tags" hflex="min" />
-		<listheader label="Action" hflex="min" />
-	</listhead>
-	<template name="model" var="fieldmapitem">
-		<listitem>
-			<listcell label="@load(fieldmapitem.source.uniqueName)" />
-			<listcell label="@load(fieldmapitem.target.name)" />
-			<listcell label="@load(fieldmapitem.target.captureRegexp)" />
-			<listcell label="@load(fieldmapitem.target.analyzer)" />
-			<listcell label="@load(fieldmapitem.target.removeTag)" />
-			<listcell>
-				<image src="/images/action_delete.png"
-					onClick="@command('onFieldMapItemRemove', fieldmapitem=fieldmapitem)" />
-			</listcell>
-		</listitem>
-	</template>
-</listbox>
+			</auxheader>
+		</auxhead>
+		<listhead hflex="true">
+			<listheader label="Parser field" hflex="min" />
+			<listheader label="Index field" hflex="min" />
+			<listheader label="Capture Reg.Exp." />
+			<listheader label="Analyzer" hflex="min" />
+			<listheader label="Remove tags" hflex="min" />
+			<listheader label="Action" hflex="min" />
+		</listhead>
+		<template name="model" var="fieldmapitem">
+			<listitem hflex="true">
+				<listcell label="@load(fieldmapitem.source.uniqueName)" />
+				<listcell label="@load(fieldmapitem.target.name)" />
+				<listcell
+					label="@load(fieldmapitem.target.captureRegexp)" />
+				<listcell label="@load(fieldmapitem.target.analyzer)" />
+				<listcell label="@load(fieldmapitem.target.removeTag)" />
+				<listcell>
+					<image src="/images/action_delete.png"
+						onClick="@command('onFieldMapItemRemove', fieldmapitem=fieldmapitem)" />
+				</listcell>
+			</listitem>
+		</template>
+	</listbox>
+</zk>
