Learner user interface. Mallet integration.

--- a/WebContent/WEB-INF/zul/schema/index.zul
+++ b/WebContent/WEB-INF/zul/schema/index.zul
@@ -22,7 +22,8 @@
 		<tab id="tabStopWords" label="Stop words" />
 		<tab id="tabSynonyms" label="Synonyms" />
 		<tab id="tabAutoCompletion" label="Auto-completion" />
-        <tab id="tabClassifier" label="Classifier" />
+		<tab id="tabClassifier" label="Classifier" />
+		<tab id="tabLearner" label="Learner" />
 	</tabs>
 	<tabpanels>
 		<tabpanel>
@@ -43,8 +44,11 @@
 		<tabpanel fulfill="tabAutoCompletion.onSelect">
 			<include src="WEB-INF/zul/schema/autocompletion.zul" />
 		</tabpanel>
-        <tabpanel fulfill="tabClassifier.onSelect">
-            <include src="WEB-INF/zul/classifier/index.zul" />
-        </tabpanel>
+		<tabpanel fulfill="tabClassifier.onSelect">
+			<include src="WEB-INF/zul/classifier/index.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabLearner.onSelect">
+			<include src="WEB-INF/zul/learner/index.zul" />
+		</tabpanel>
 	</tabpanels>
 </tabbox>
