--- a/WebContent/WEB-INF/zul/learner/edit.zul
+++ b/WebContent/WEB-INF/zul/learner/edit.zul
@@ -37,14 +37,119 @@
 					</cell>
 				</row>
 				<row>
-					<label value="Parameters:" />
-					<textbox multiline="true" rows="10"
-						value="@bind(learning.currentLearner.parameters)" cols="80" />
+					<label value="Query template" />
+					<combobox cols="20"
+						model="@load(learning.requestList)"
+						value="@bind(learning.currentLearner.searchRequest)">
+						<template name="model">
+							<comboitem label="@load(each)" />
+						</template>
+					</combobox>
+				</row>
+				<row>
+					<label value="Source Field map" />
+					<cell>
+						<hbox align="center">
+							<listbox mold="select"
+								model="@load(learning.indexFieldList)"
+								selectedItem="@bind(learning.selectedSourceIndexField)">
+								<template name="model">
+									<listitem label="@load(each.name)" />
+								</template>
+							</listbox>
+							<label value="linked in" />
+							<listbox mold="select"
+								model="@load(learning.currentLearner.instance.sourceFieldList)"
+								selectedItem="@bind(learning.selectedSourceLearnerField)">
+								<template name="model">
+									<listitem label="@load(each)" />
+								</template>
+							</listbox>
+							<button label="add"
+								onClick="@command('onSourceLinkAdd')" />
+						</hbox>
+						<listbox
+							model="@load(learning.currentLearner.sourceFieldMap.list)">
+							<listhead>
+								<listheader label="Index field" />
+								<listheader label="Learner field" />
+								<listheader label="Action" />
+							</listhead>
+							<template name="model" var="link">
+								<listitem>
+									<listcell
+										label="@load(link.source.uniqueName)" />
+									<listcell
+										label="@load(link.target.name)" />
+									<listcell>
+										<image
+											src="/images/action_delete.png"
+											onClick="@command('onSourceLinkRemove', link=link)" />
+									</listcell>
+								</listitem>
+							</template>
+						</listbox>
+					</cell>
+				</row>
+				<row>
+					<label value="Target Field map" />
+					<cell>
+						<hbox align="center">
+							<listbox mold="select"
+								model="@load(learning.currentLearner.instance.targetFieldList)"
+								selectedItem="@bind(learning.selectedTargetLearnerField)">
+								<template name="model">
+									<listitem label="@load(each)" />
+								</template>
+							</listbox>
+							<label value="linked in" />
+							<listbox mold="select"
+								model="@load(learning.indexFieldList)"
+								selectedItem="@bind(learning.selectedTargetIndexField)">
+								<template name="model">
+									<listitem label="@load(each.name)" />
+								</template>
+							</listbox>
+							<button label="add"
+								onClick="@command('onTargetLinkAdd')" />
+						</hbox>
+						<listbox
+							model="@load(learning.currentLearner.targetFieldMap.list)">
+							<listhead>
+								<listheader label="Learner field" />
+								<listheader label="Index field" />
+								<listheader label="Action" />
+							</listhead>
+							<template name="model" var="link">
+								<listitem>
+									<listcell
+										label="@load(link.source.uniqueName)" />
+									<listcell
+										label="@load(link.target.name)" />
+									<listcell>
+										<image
+											src="/images/action_delete.png"
+											onClick="@command('onTargetLinkRemove', link=link)" />
+									</listcell>
+								</listitem>
+							</template>
+						</listbox>
+					</cell>
 				</row>
 				<row>
 					<label value="Active: " />
 					<checkbox label="enabled"
 						checked="@bind(learning.currentLearner.active)" />
+				</row>
+				<row>
+					<label value="Learn" />
+					<cell>
+						<button label="Reset"
+							onClick="@command('onReset')" />
+						<button label="Learn"
+							onClick="@command('onLearn')" />
+						<label value="Info" />
+					</cell>
 				</row>
 			</rows>
 			<foot>
