--- a/WebContent/WEB-INF/zul/update/index.zul
+++ b/WebContent/WEB-INF/zul/update/index.zul
@@ -18,6 +18,7 @@
 	<tabs>
 		<tab id="tabUpdateForm" label="Using form" selected="true" />
 		<tab id="tabUpdateUploadXml" label="upload XML file" />
+		<tab id="tabUpdateUploadTxt" label="upload Text file (CSV)" />
 	</tabs>
 	<tabpanels>
 		<tabpanel>
@@ -25,6 +26,9 @@
 		</tabpanel>
 		<tabpanel fulfill="tabUpdateUploadXml.onSelect">
 			<include src="WEB-INF/zul/update/uploadXml.zul" />
+		</tabpanel>
+		<tabpanel fulfill="tabUpdateUploadTxt.onSelect">
+			<include src="WEB-INF/zul/update/uploadTxt.zul" />
 		</tabpanel>
 	</tabpanels>
 </tabbox>
