--- a/src/main/webapp/WEB-INF/zul/schema/autocompletion.zul
+++ b/src/main/webapp/WEB-INF/zul/schema/autocompletion.zul
@@ -33,12 +33,35 @@
 					</row>
 					<row>
 						<label value="Field source" />
-						<listbox model="@load(auto.fieldList)"
-							mold="select" selectedItem="@bind(auto.field)">
-							<template name="model">
-								<listitem label="@load(each.name)" />
-							</template>
-						</listbox>
+						<grid model="@load(auto.fields)">
+							<columns>
+								<column>
+									<listbox
+										model="@load(auto.fieldList)" mold="select"
+										selectedItem="@bind(auto.selectedField)">
+										<template name="model">
+											<listitem
+												label="@load(each)" />
+										</template>
+									</listbox>
+								</column>
+								<column hflex="min">
+									<button
+										image="images/action_add.png"
+										onClick="@command('onFieldAdd')" />
+								</column>
+							</columns>
+							<rows>
+								<template name="model">
+									<row>
+										<label value="@load(each)" />
+										<button
+											image="images/action_delete.png"
+											onClick="@command('onFieldRemove', field=each)" />
+									</row>
+								</template>
+							</rows>
+						</grid>
 						<label
 							value="Select which field will be used to populate the auto-completion" />
 					</row>
@@ -61,12 +84,19 @@
 					<footer span="3" align="center">
 						<hbox align="center" width="100%"
 							visible="@load(not empty auto.selectedItem)">
+							<button label="Cancel"
+								onClick="@command('onCancel')" />
+							<space />
 							<button label="Save"
 								onClick="@command('onSave')" />
 							<space />
 							<button label="Build"
 								onClick="@command('onBuild')"
 								disabled="@load(auto.selectedItem.buildThread.running)" />
+							<space />
+							<space />
+							<button label="Delete"
+								onClick="@command('onDelete')" />
 						</hbox>
 						<hbox align="center" width="100%"
 							visible="@load(empty auto.selectedItem)">
@@ -87,7 +117,8 @@
 				<template name="model">
 					<listitem>
 						<listcell label="@load(each.name)" />
-						<listcell label="@load(each.buildThread.statu)" />
+						<listcell
+							label="@load(each.buildThread.status)" />
 						<listcell
 							label="@load(each.buildThread.indexNumDocs)" />
 					</listitem>
