Advanced runtime panel: - The SOAP Web Service is no more loaded (by default) - The stack trace is no more printed (by default)

--- a/src/main/webapp/WEB-INF/zul/runtime/advanced/misc.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/advanced/misc.zul
@@ -28,5 +28,16 @@
 			<label
 				value="Set the maximum number of clauses permitted per boolean query. Default value is 1024" />
 		</row>
+		<row>
+			<label value="Enable the SOAP Web Service" />
+			<checkbox checked="@bind(advanced.soapActive.value)" />
+			<label
+				value="Enable/disable the SOAP Web Service. The instance must be restarted." />
+		</row>
+		<row>
+			<label value="Log full trace" />
+			<checkbox checked="@bind(advanced.logFullTrace.value)" />
+			<label value="Enable/disable logging the full stack trace." />
+		</row>
 	</rows>
 </grid>
