Default browser can be set in runtime/advanced panel

--- a/src/main/webapp/WEB-INF/zul/crawler/web/screenshot/admin.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/screenshot/admin.zul
@@ -36,7 +36,7 @@
 			<listbox model="@load(screenshot.browserList)" mold="select"
 				selectedItem="@bind(screenshot.screenshotManager.browserDriver)">
 				<template name="model" var="driver">
-					<listitem label="@load(driver.name)" />
+					<listitem label="@load(driver.label)" />
 				</template>
 			</listbox>
 			<space />
