Autocompletion can be filtered using a search query.

--- a/src/main/webapp/WEB-INF/zul/query/search/general.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/general.zul
@@ -28,6 +28,11 @@
 					width="90%" />
 			</row>
 			<row>
+				<label>Empty query string returns all documents:</label>
+				<checkbox
+					checked="@bind(general.request.emptyReturnsAll)" />
+			</row>
+			<row>
 				<label>Default operator:</label>
 				<listbox mold="select"
 					selectedItem="@bind(general.request.defaultOperator)">
